Fix images cause scrollbars on narrow screens

--- a/app/posts/[slug]/page.module.css
+++ b/app/posts/[slug]/page.module.css
@@ -80,9 +80,12 @@
     }
   }
 
+  & p:has(img) {
+    max-width: calc(var(--content-width) + 32px);
+  }
+
   & img {
-    max-width: calc(100% + 32px);
-    margin: 0 -16px;
+    max-width: 100%;
   }
 
   & h1,
